fixed spacing and updated css to add media query

--- a/src/views/About/About.module.css
+++ b/src/views/About/About.module.css
@@ -1,9 +1,14 @@
 .article {
     margin: 0 auto;
     max-width: 650px;
-    padding: 0 15px;
+    padding: 30px 15px;
     font-size: 24px;
     line-height: 1.5;
+}
+
+.title {
+    font-size: 3em;
+    margin-bottom: 1em;
 }
 
 .article a {
@@ -11,7 +16,12 @@
     text-decoration: underline;
 }
 
-.title {
-    font-size: 3em;
-    margin-bottom: 1em;
+@media screen and (max-width: 768px) {
+    .article {
+        padding: 60px 20px;
+    }
+
+    .title {
+        font-size: 2em;
+    }
 }
